fixed issue with background image covering search results and input fields

--- a/Develop/css/style.css
+++ b/Develop/css/style.css
@@ -11,7 +11,6 @@ body {
     background-position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.4;
 }
 
 header {
